# franka-motion-planning-apf-rrt

./: .gitignore  .pylintrc  Makefile  README.md  requirements.txt
task1_perception/: __init__.py  camera.py  config.py  controller.py  detection.py  pipeline.py  scene.py
task1_perception/results/: joint_info.txt  object_detection_output.txt  world_coordinates.txt  world_coordinates_corrected.txt
task2_motion_planning/: __init__.py  apf_rrt_planner.py
task3_haptic_pid/: CMakeLists.txt
task3_haptic_pid/include/: haptic_pid.hpp
task3_haptic_pid/src/: haptic_pid.cpp  main.cpp
task4_moteus/: __init__.py  moteus_actuator.py
tests/: __init__.py  test_task2_planner.py  test_task3_pid.py  test_task4_moteus.py
tests/results/: telemetry_mock.csv  test_task2_runs.csv
